[package]
name = "irontrade_alpaca"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
description = """
Rust alpaca trading client built on top of irontrade crate.
"""
repository = "https://github.com/junioraw/irontrade_alpaca"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
irontrade = "0.2.0"
num-decimal = { version = "0.2.5", default-features = false, features = ["num-v04", "serde"] }
apca = { git = "https://github.com/junioraw/apca.git", branch = "patch-get_position", version = "0.30.0" }